<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_mobile_otp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mobilenno_editext_round_background"
            android:inputType="textEmailAddress"
            android:hint="@string/mobile_hint_text"
            android:textColorHint="@color/hint_color_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_otp"
            android:textSize="@dimen/sp_14"
            android:layout_marginTop="@dimen/dp_10"
            android:textAppearance="@style/label_avenir_medium"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_text"
            android:textAppearance="@style/label_avenir_medium"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
